[package]
name = "pq_address"
version = "0.1.0"
edition = "2024"
authors = ["Conor Deegan <cd@projecteleven.com>"]
description = "A Rust library for encoding and decoding post‑quantum public keys into human‑friendly Bech32m addresses."
readme = "README.md"
repository = "https://github.com/p-11/pq-address-rs/"
documentation = "https://github.com/p-11/pq-address-rs#readme"
license = "MIT"
categories = ["cryptography,cryptography::cryptocurrencies,encoding"]
keywords = ["crypto", "bitcoin", "post-quantum"]
exclude = [
    ".github/*",
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
]

[dependencies]
bech32 = "0.11.0"
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
base64 = "0.22.1"
